Fixing input style colors

--- a/src/render/assets/css/input.module.css
+++ b/src/render/assets/css/input.module.css
@@ -1,6 +1,8 @@
 :root {
     --input-height: 42px;
     --toggle-icon-size: 18px;
+    --inp-background-normal: var(--background-secondary);
+    --inp-background-disabled: var(--background-secondary-alt);
 }
 
 .inputGroup {
