--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -2134,6 +2134,7 @@ a:hover {
     z-index: 21;
     overscroll-behavior: contain;
     transform: scale(0.5);
+    transform-origin: 0px 0px;
     transition: opacity .2s cubic-bezier(0.2, 0, 0.2, 1),transform .2s cubic-bezier(0.2, 0, 0.2, 1) !important;
     opacity: 0;
 
