--- a/src/render/assets/css/auth.module.css
+++ b/src/render/assets/css/auth.module.css
@@ -39,7 +39,7 @@
     min-height: 320px;
     background: var(--background-primary);
     box-shadow: 0 2px 10px 0 rgb(0 0 0 / 20%);
-    padding: 2em;
+    padding: 2rem;
     border-radius: 15px;
     box-sizing: border-box;
 }
