--- a/src/render/assets/css/radio.module.css
+++ b/src/render/assets/css/radio.module.css
@@ -27,7 +27,6 @@
     position: relative;
     color: var(--interactive-normal);
     cursor: pointer;
-    border-radius: 3px;
 }
 .radioGroup > .item[aria-checked=true] {
     color: var(--interactive-active) !important;
@@ -44,6 +43,9 @@
     border-radius: 5px;
     background: var(--background-secondary);
     padding: 10px;
+}
+:global(:root.more-border) .radioGroup > .item > .radioBar {
+    border: 1px solid var(--border-color-1);
 }
 .radioGroup > .item > .radioBar:hover {
     background: var(--background-modifier-hover);
