Fix fullscreen mode

--- a/src/render/assets/css/frame.module.css
+++ b/src/render/assets/css/frame.module.css
@@ -1,5 +1,9 @@
 /* ================ Frame Bar ================ */
 
+:global(:root.fullscreen) .frame {
+    display: none;
+}
+
 .frame {
     z-index: 3001;
     display: flex;
