Added markdown parse

--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -2,7 +2,7 @@
 @import "./fonts.css";
 @import "./colors.css";
 @import "./animations.css";
-
+@import "./markdown.css";
 
 /*******************************************************************************
  *                                                                             *
