--- a/src/render/assets/css/markdown.css
+++ b/src/render/assets/css/markdown.css
@@ -27,7 +27,7 @@
 .markdown h1 {
 	padding-bottom: 0.3em;
   font-size: 2em;
-  border-bottom: 1px solid var(--border-color-1);
+  border-bottom: 1px solid var(--background-modifier-accent);
 }
 
 .markdown h3 {
