Revert "Update "a" tag link style"
This reverts commit 272ed8ab8348f1525b8fa2b2eefe251453f9ae51.

--- a/src/render/assets/css/colors.css
+++ b/src/render/assets/css/colors.css
@@ -62,7 +62,7 @@
     --background-floating: #fff;
     --header-primary: #060607;
     --header-secondary: #4f5660;
-    --text-link: #0969da;
+    --text-link: #00b0f4;
     --text-normal: #2e3338;
     --text-positive: #4fdc7b;
     --text-warning: #faa81a;
