--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -25,13 +25,8 @@ div {
 
 a {
     color: var(--text-link);
-    text-decoration: none;
-}
-
-a:hover {
-    color: var(--text-link) !important;
-    text-decoration: underline;
-    cursor: pointer;
+    /* text-decoration: none; */
+    cursor: pointer
 }
 
 a img {
