--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -25,8 +25,12 @@ div {
 
 a {
     color: var(--text-link);
-    /* text-decoration: none; */
-    cursor: pointer
+    text-decoration: none;
+}
+a:hover {
+    color: var(--text-link) !important;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 a img {
