--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -1523,6 +1523,7 @@ a.anchor:hover {
     display: flex !important;
     flex-wrap: wrap;
     line-height: unset;
+    flex-direction: column;
 }
 
 .d-flex.centred {
