--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -1030,6 +1030,10 @@ body {
     line-height: normal;
 }
 
+.main-content.no-scroll {
+    overflow: hidden;
+}
+
 .main-content > .top {
     width: 100%;
     height: 100%;
