--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -1215,7 +1215,15 @@ body {
     font-size: 1.5em;
     text-align: center;
     font-weight: 700;
-    line-height: normal;
+    line-height: 1.5;
+}
+.main-content h3 {
+    color: var(--interactive-normal);
+    font-size: 16px;
+    text-align: center;
+    font-weight: 500;
+    line-height: 1;
+    margin-bottom: 8px;
 }
 
 .main-content iframe {
