--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -834,9 +834,10 @@ body {
 }
 
 .sidebar-main > .container-3Wc7 > .scroller + .scroller {
-    flex: 0 1 20%;
+    flex: 0 0 auto;
     border-top: 2px solid var(--background-modifier-selected);
     box-shadow: 0 0, 0 10px 20px 10px var(--color-shadow);
+    min-height: 10vh;
 }
 
 .sidebar-main > .container-3Wc7 > .scroller {
