--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -337,6 +337,9 @@ tt, code, samp {
 .color-red {
     color: var(--text-negative);
 }
+.color-brand {
+    color: var(--brand-color-2);
+}
 
 .status-container {
     display: flex;
@@ -520,7 +523,7 @@ p {
 .navItem {
     border-radius: 2px;
     transition: 0.2s all;
-    padding: 6px 10px;
+    padding: 5px 8px;
     position: relative;
     font-size: 16px;
     line-height: 20px;
