--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -868,8 +868,9 @@ body {
     height: 32px;
     position: sticky;
     top: 0;
-    background-color: var(--background-modifier-accent);
+    background-color: var(--background-primary);
     margin-bottom: 4px;
+    z-index: 2;
 }
 .sidebar-main > .container-3Wc7 .header-w {
     z-index: 1;
