--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -1129,7 +1129,8 @@ body {
     box-sizing: border-box;
     font-size: 20px;
     font-weight: 800;
-    padding: 8px 32px;
+    padding: 8px 16px;
+    min-width: 10rem;
     border-radius: 0;
     color: #fdfdfd;
     font-family: var(--font-primary);
