--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -749,6 +749,17 @@ body {
     background-color: var(--background-tertiary);
     display: flex;
     flex-direction: column;
+    transition: transform 0.25s cubic-bezier(.65,-0.3,0.3,1.3), opacity 0.35s ease;
+    z-index: 1;
+}
+
+.app-container:not(.open) {
+    transform: scale(0.8);
+    opacity: 0;
+}
+.app-container.open {
+    transform: none;
+    opacity: 1;
 }
 
 :root.platform-win .preloader,
