--- a/src/render/assets/css/auth.module.css
+++ b/src/render/assets/css/auth.module.css
@@ -12,10 +12,10 @@
     overflow: auto;
     background-color: var(--background-tertiary);
     transition:transform 0.25s cubic-bezier(.65,-0.3,0.3,1.3), opacity 0.35s ease;
-    z-index: 2;
+    z-index: 3003;
 }
 .container:global(:not(.open)) {
-    transform: scale(1.2);
+    transform: scale(1.1) translateZ(0px);
     opacity: 0;
 }
 
